# rs-block-data-scanner

./: .gitignore  Cargo.toml  Makefile  README.md  analyze_storage.sh  config_example.yaml  rebuild.sh  start.sh  stop.sh
scripts/: help.sh  start_api.sh  start_scanner.sh  stop_api.sh  stop_scanner.sh
src/: cli.rs  config.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs  storage.rs
src/chains/evm/: checker.rs  cleaner.rs  client.rs  context.rs  mod.rs  scanner.rs
src/core/: cleaner.rs  mod.rs  scanner.rs  storage.rs  table.rs  types.rs
src/storage/: manager.rs  mod.rs  rocksdb.rs  schema.rs
src/utils/: format.rs  logger.rs  metrics.rs  mod.rs  retry.rs
tests/: evm_reorg.rs
