[package]
name = "rs-block-data-scanner"
version = "0.1.0"
edition = "2024"

[lib]
name = "rs_block_data_scanner"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
alloy = { version = "0.4", features = ["full"] }
rocksdb = { version = "0.21", features = ["multi-threaded-cf"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
tracing-log = "0.2"
metrics = "0.21"
metrics-exporter-prometheus = "0.11"
config = "0.14"
dotenvy = "0.15"
chrono = { version = "0.4.42", features = ["serde"] }

